--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p> Inscrivez votre nom ( Electeur) et ceux  de vos candidats pour tous les postes, ensuite appuiyez sur le bouton " Submit" </p>
 
 
-    <form action="mailto:"guedrydenis@gmail.com"  method="post" enctype="text/plain">
+    <form action="mailto: guedrydenis@gmail.com"  method="post" enctype="text/plain">
   <!--  <h3>Liste des candidats par poste.</h3>
       <p>PRESIDENT(E):</p>
       <p>VICE-PRESIDENT(E):</p>
